...
    <string name="app_signOutConfirmationBody3">Next time you sign in, you’ll be able to add your documents to your GOV.UK  Wallet and set your preferences again.</string>
    <string name="app_signOutAndDeleteAppDataButton">Sign out and delete information</string>

    <string name="app_youveBeenSignedOutTitle">You’ve been signed out</string>
    <string name="app_youveBeenSignedOutBody1">This is to keep the information in your GOV.UK One Login app secure.</string>
    <string name="app_youveBeenSignedOutBody2">You need to sign in again to continue.</string>
    <string name="app_SignInWithGovUKOneLoginButton">Sign in with GOV.UK One Login</string>

    <string name="app_signOutConfirmationTitle_no_wallet">Are you sure you want to sign out?</string>
    <string name="app_signOutConfirmationBody1_no_wallet">Signing out will switch off your preferences for:</string>
    <string name="app_signOutConfirmationBullet1_no_wallet">using biometrics or your phone’s pin or pattern to unlock the app</string>
    <string name="app_signOutConfirmationBullet2_no_wallet">sharing analytics about how you use the app</string>
    <string name="app_signOutConfirmationBody2_no_wallet">You’ll be asked to set these preferences again next time you sign in.</string>
...
    <string name="app_splashScreenAnalyticsScreenName" translatable="false">one login splash screen</string>
    <string name="app_splashScreenUnlockAnalyticsScreenName" translatable="false">one login unlock screen</string>
    <string name="app_splashScreenLoadingIndicatorText">Loading</string>
    <string name="app_splashScreenLoadingContentDescription" translatable="false">Circular progress/ loading indicator</string>

    <!-- Sign in -->
    <string name="app_signInTitle" translatable="false">GOV.UK One Login</string>
    <string name="app_signInBody">Sign in with the same email address you use for your GOV.UK One Login.</string>
    <string name="app_signInButton">Sign in</string>
    <string name="app_unlockButton">Unlock</string>
    <string name="app_signInErrorTitle">There was a problem signing you in</string>
    <string name="app_signInErrorBody">You can try signing in again.\n\nIf this does not work, you may need to try again later.</string>
    <string name="app_signInIconDescription" translatable="false">Gov Uk Icon</string>

    <!-- Errors -->
...
    <!-- Passcode info -->
    <string name="app_noPasscodePatternSetupTitle">It looks like this phone does not have a passcode or pattern</string>
    <string name="app_noPasscodeSetupBody1">Setting a passcode on your phone adds further security. You can then sign into the app this way instead of with your email address and password.</string>
    <string name="app_noPasscodeSetupBody2">You can set a passcode later by going to your phone settings.</string>

    <!-- Biometric Opt-In -->
    <string name="app_enableBiometricsTitle">Unlock the app with biometrics</string>
    <string name="app_enableBiometricsBody1">You can unlock the app with your face, fingerprint or iris within 30 minutes of signing in with GOV.UK One Login.</string>
    <string name="app_enableBiometricsBody2">If you do not want to use your biometrics, you can unlock the app with your phone’s pin or pattern instead.</string>
    <string name="app_enableBiometricsBody3">Anyone who can unlock your phone with their biometrics or with your phone’s pin or pattern might be able to access your app.</string>
    <string name="app_enableBiometricsButton">Use biometrics</string>
    <string name="app_enablePasscodeOrPatternButton">Use pin or pattern instead</string>

    <string name="app_authenticationDialogueTitle">Unlock GOV.UK One Login</string>

    <string name="app_homeTitle">Home</string>

    <string name="app_walletTitle" translatable="false">GOV.UK Wallet</string>
...

    <!-- Analytics Opt In -->
    <string name="app_analyticsPermissionTitle">Help improve the app by sharing analytics</string>
    <string name="app_analyticsPermissionBody">You can help the GOV.UK One Login team make improvements by sharing analytics about how you use the app.\n\nThese analytics are anonymous. They show us what is and is not working, and help make the app better.\n\nYou can stop sharing these analytics any time by changing your app settings.</string>
    <string name="app_privacyNoticeLink">Read more about this in the GOV.UK One Login privacy notice</string>
    <string name="app_shareAnalyticsButton">Share analytics</string>
    <string name="app_doNotShareAnalytics">Skip for now</string>

    <!-- Update Required -->
    <string name="app_updateApp_Title">You need to update your app</string>
    <string name="app_updateAppBody1">You’re using an old version of the GOV.UK One Login app.</string>
    <string name="app_updateAppBody2">Update your app to continue.</string>
    <string name="app_updateAppButton">Update GOV.UK One Login app</string>
...
