<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="openIdConnectAuthorizeEndpoint" translatable="false">/authorize</string>

    <string name="webRedirectEndpoint" translatable="false">/redirect</string>
    <string name="helloWorldEndpoint" translatable="false">/hello-world</string>
    <string name="tokenExchangeEndpoint" translatable="false">/token</string>
    <string name="jwksEndpoint" translatable="false">/.well-known/jwks.json</string>
    <string name="clientAttestationEndpoint" translatable="false">/client-attestation</string>
    <string name="appInfoEndpoint" translatable="false">/appInfo</string>
</resources>