<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="splashLogoTestTag" translatable="false">logo test tag</string>
    <string name="splashCrownIconTestTag" translatable="false">crown icon test tag</string>
    <string name="splashUnlockBtnTestTag" translatable="false">unlock button test tag</string>
    <string name="optInSwitchTestTag" translatable="false">opt in switch test tag</string>
    <string name="appCriCardTestTag" translatable="false">Cri Orchestrator test tag</string>
    <string name="welcomeCardTestTag" translatable="false">Welcome card test tag</string>
</resources>